--- a/Programa/Programa_IS/menu.ui
+++ b/Programa/Programa_IS/menu.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QTableWidget" name="tableWidget">
+  <widget class="QTableWidget" name="tableWidgetListado">
    <property name="geometry">
     <rect>
      <x>440</x>
